objects/ASI_TH_CRM_PaymentRequestLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AC_Code_Desc__c</fullName>
        <formula>ASI_CRM_CN_AC_Code__r.ASI_MFM_A_C_Description__c</formula>
        <label>A/C Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Payment Request Line Items (A/C Code)</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Amount_Number__c</fullName>
        <formula>ASI_CRM_Adjusted_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Amount (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Volume_Id__c</fullName>
        <label>Actual Volume Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjusted_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjustment_Remark__c</fullName>
        <label>Adjustment Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjustment__c</fullName>
        <formula>ASI_CRM_Module__r.ASI_CRM_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Amount_Number__c</fullName>
        <formula>ASI_TH_CRM_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BC_Excl_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BC (Excl. Premium)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BC_Martell_Excl_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BC Martell  (Excl. Premium)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BC_Pure_Excl_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BC Pure (Excl. Premium)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BU__c</fullName>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Back_Rebate_per_Bottle__c</fullName>
        <label>Back Rebate per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buy_every_9L__c</fullName>
        <label>Buy every 9L</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CNY_Est__c</fullName>
        <label>CNY(Est.)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_AC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Actual_Vol__c</fullName>
        <label>Actual Vol (Std. Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Allow_Changing_Incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Changing Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Bottle_Collected__c</fullName>
        <label>Bottle Collected (Std. Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Collection_Rate__c</fullName>
        <label>Collection Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Completion_Rate__c</fullName>
        <label>Completion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Contract_BRSF_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract BRSF Line Item</label>
        <referenceTo>ASI_CRM_CN_Contract_BRSF_Line_Item__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Contract_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Cost</label>
        <referenceTo>ASI_CRM_Contract_Cost__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Cost_Type__c</fullName>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Expense_Type__c</fullName>
        <label>Expense Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Incentive_BT__c</fullName>
        <label>Incentive (Per Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Offtake_Vol__c</fullName>
        <label>Offtake Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Over_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payable_Vol__c</fullName>
        <label>Payable Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payment_Description__c</fullName>
        <label>Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Remaining_Amount__c</fullName>
        <formula>ASI_CRM_CN_Contract_Cost__r.ASI_CRM_CN_Estimate_Amount__c  - ASI_TH_CRM_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Standard__c</fullName>
        <label>Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Payment Request Line Items (Sub-brand)</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Suggested_Amount__c</fullName>
        <label>Suggested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Supporting_Document__c</fullName>
        <label>Supporting Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle Collection</fullName>
                </value>
                <value>
                    <fullName>WS Intake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Target_BT__c</fullName>
        <label>Target (Std. Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Payable__c</fullName>
        <label>Total Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_Actual_Vol_Martell_CR12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CTD Actual Vol Martell (CR12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_Actual_Vol_Martell__c</fullName>
        <label>CTD Actual Vol Martell (Std. Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_Actual_Vol_Pure_CR12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CTD Actual Vol Pure(CR12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_Actual_Vol_Pure__c</fullName>
        <label>CTD Actual Vol Pure(Std. Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_Actual_Vol__c</fullName>
        <label>CTD Actual Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_BC_Martell_CR12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CTD BC Martell(CR12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_BC_Martell__c</fullName>
        <label>CTD BC Martell(Std. Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_BC_Pure_CR12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CTD BC Pure(CR12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_BC_Pure__c</fullName>
        <label>CTD BC Pure(Std. Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CTD_Cap_Collection_Vol__c</fullName>
        <label>CTD Cap Collection Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cancelled_in_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled in JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_Ratio__c</fullName>
        <formula>(ASI_TH_CRM_Payment_Request__r.ASI_CRM_Total_Cash_Amount__c / (ASI_TH_CRM_Payment_Request__r.ASI_TH_CRM_Total_Amount__c + ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_Total_BRSF_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Ratio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Exist_Before_RTM__c</fullName>
        <formula>ASI_TH_CRM_Payment_Request__r.ASI_CRM_Contract_Exist_Before_RTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Exist Before RTM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contracted_Rate_9L__c</fullName>
        <label>Contracted Rate (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contribution_From__c</fullName>
        <label>Contribution From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contribution_To__c</fullName>
        <label>Contribution To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contribution__c</fullName>
        <formula>ASI_CRM_Contribution_To__c - ASI_CRM_Contribution_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Difference_Adjusted_Amount__c</fullName>
        <formula>if (ISBLANK(ASI_CRM_Adjusted_Amount__c),
0,
ASI_CRM_Adjusted_Amount__c - ASI_TH_CRM_Amount__c
)</formula>
        <label>Adjusted Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ETL_Date__c</fullName>
        <label>ETL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Finance_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Full_Contract_Target_ExclPremium__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In its  module unit</description>
        <label>Full Contract Target (Excl. Premium)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Give_Ad_hoc_Cash__c</fullName>
        <label>Give (Ad-hoc $)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Ratio__c</fullName>
        <label>Incentive Ratio</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Excl_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Intake (Excl. Premium)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Martell_Excl_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Intake Martell (Excl. Premium)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Intake_Pure_Excl_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Intake Pure (Excl. Premium)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Document_No__c</fullName>
        <label>JDE Document No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Document_Type__c</fullName>
        <label>JDE Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Key_Sub_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Sub-Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Line_Name__c</fullName>
        <label>Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MAF_Est__c</fullName>
        <label>MAF(Est.)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Adjusted_Amount__c</fullName>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Martell_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Martell Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Max_Incentive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <referenceTo>ASI_CRM_Module__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Non_Contract_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Contract Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Other_Est__c</fullName>
        <label>Other(Est.)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Over_Incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Amount_Ratio__c</fullName>
        <formula>(if( RecordType.DeveloperName == &apos;ASI_CRM_CN_Payment_Request_Detail_BRSF&apos;, ASI_CRM_CN_Total_Payable__c, ASI_TH_CRM_Amount__c)/(ASI_TH_CRM_Payment_Request__r.ASI_TH_CRM_Total_Amount__c + ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_Total_BRSF_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount Ratio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Amount__c</fullName>
        <formula>if( RecordType.DeveloperName == &apos;ASI_CRM_CN_Payment_Request_Detail_BRSF&apos;,   ASI_CRM_CN_Total_Payable__c *   ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_Adjustment__c,  ASI_TH_CRM_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Detail</label>
        <referenceTo>ASI_HK_CRM_Promotion_Detail__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Mechanic_Text__c</fullName>
        <formula>&quot;Buy every &quot; &amp; 
IF(ASI_CRM_Buy_every_9L__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; Text(ASI_CRM_Buy_every_9L__c)
&amp; &quot; 9L Give $&quot; &amp; 
IF(ASI_CRM_Give_Ad_hoc_Cash__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; Text(ASI_CRM_Give_Ad_hoc_Cash__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Mechanic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Real_Volume__c</fullName>
        <label>Real Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Account_Code_Mapping__c</fullName>
        <formula>IF( ISPICKVAL( ASI_CRM_SG_Type__c , &apos;Cash&apos;) , &apos;5275.CASH_&apos;,
  IF(ISPICKVAL( ASI_CRM_SG_Type__c , &apos;Event&apos;), &apos;5558.SPON&apos;,
    IF(ISPICKVAL( ASI_CRM_SG_Type__c , &apos;Signages / Advertising Spot&apos;), &apos;5582.NEW_&apos;, 
      IF(ISPICKVAL( ASI_CRM_SG_Type__c , &apos;Trade Incentive Trips&apos;), &apos;5553.TRDINC&apos;, 
        IF(ISPICKVAL( ASI_CRM_SG_Type__c , &apos;Product Branding Display&apos;), &apos;5554&apos;,
          IF(ISPICKVAL( ASI_CRM_SG_Type__c , &apos;Ad-hoc Promotions&apos;), &apos;5275.ADH_&apos;, 
            IF(ISPICKVAL( ASI_CRM_SG_Type__c , &apos;Anniversary&apos;), &apos;5559.PROONT&apos;, &apos;&apos;) 
          ) 
        ) 
      ) 
    ) 
  ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Account_Code__c</fullName>
        <formula>IF(ISPICKVAL(ASI_CRM_SG_Type__c, &quot;Cash&quot;), &quot;A&quot;,
    IF (ISPICKVAL(ASI_CRM_SG_Type__c, &quot;Events&quot;), &quot;B&quot;,
        IF (ISPICKVAL(ASI_CRM_SG_Type__c, &quot;Signages / Advertising Spot&quot;), &quot;C&quot;, 
            IF (ISPICKVAL(ASI_CRM_SG_Type__c, &quot;Trade Incentive Trips&quot;), &quot;D&quot;, 
                IF (ISPICKVAL(ASI_CRM_SG_Type__c, &quot;Product Branding Display&quot;), &quot;E&quot;, 
                    IF (ISPICKVAL(ASI_CRM_SG_Type__c, &quot;Ad-hoc Promotions&quot;), &quot;F&quot;, &quot;Unknown&quot;
                    )
                )
             )
         )   
    ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_JDE_COA_Code__c</fullName>
        <description>First half: Construct COA based on Payment Request Type
Second half: certain COA requires appending Category Code 13 (Sector Code) in the COA
Requirement to allow user select IIO/HNR on Outlet, but JDE COA map to HR

20170223 CHM114259479: Default IIO/HNR mapping to _HNR
20180601: Back Rebate no need Cat Code 13</description>
        <formula>CASE( TEXT(ASI_CRM_SG_Type__c  ) ,
	&quot;A&amp;P Fund&quot;, &quot;5275.ADH_&quot;, 
	&quot;Ad-hoc Promotions&quot;, &quot;5275.ADH_&quot;, 
	&quot;Cash - Target Achieved&quot;, &quot;5275.CASH_&quot;,
	&quot;Cash - Upfront&quot;, &quot;1430.CS&quot;,
	&quot;Contract Margin&quot;, &quot;5245.MARG_&quot;,
	 &quot;Events&quot;, &quot;5558.SPON&quot;, 
	 &quot;Product Branding Display&quot;, &quot;5556&quot;, 
	 &quot;Trade Incentive Trips&quot;, &quot;5553.TRDINC&quot;, 
	 &quot;Bottle Incentive&quot;, &quot;5275.CEMP_&quot;, 
	 &quot;Back Rebates&quot;, &quot;5275.CEMP&quot;, 
	 &quot;Sales Support&quot;, &quot;5556&quot;, 
	 &quot;Signages&quot;, &quot;5280.SUPP_&quot;, 
	 &quot;Advertising Spot&quot;, &quot;5582&quot;, 
	 &quot;ERROR&quot;
 ) 
 + 
 IF( 
	IF (
		OR (TEXT(ASI_CRM_SG_Type__c)=&quot;A&amp;P Fund&quot;, 
		TEXT(ASI_CRM_SG_Type__c)=&quot;Ad-hoc Promotions&quot;, 
		TEXT(ASI_CRM_SG_Type__c)=&quot;Cash - Target Achieved&quot;, 
		TEXT(ASI_CRM_SG_Type__c)=&quot;Contract Margin&quot;, 
		TEXT(ASI_CRM_SG_Type__c)=&quot;Bottle Incentive&quot;, 
		TEXT(ASI_CRM_SG_Type__c)=&quot;Signages&quot;
		), 
		true,
		false
	),  
	IF(
		OR(TEXT(ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_SG_Category_Code_13__c)=&quot;HNR&quot;, TEXT(ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_SG_Category_Code_13__c)=&quot;IIO&quot;),
		&quot;HNR&quot;,
		TEXT(ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_SG_Category_Code_13__c)
	) 
	,&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE COA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_JDE_Is_Append_Local_Channel__c</fullName>
        <formula>/*
 * Formula in SG CRM P1
IF (
	OR (TEXT(ASI_CRM_SG_Type__c)=&quot;Cash&quot;, TEXT(ASI_CRM_SG_Type__c)=&quot;Cash - Target Achieved&quot;, TEXT(ASI_CRM_SG_Type__c)=&quot;Signages / Advertising Spot&quot;, TEXT(ASI_CRM_SG_Type__c)=&quot;Ad-hoc Promotions&quot;, TEXT(ASI_CRM_SG_Type__c)=&quot;Contract Margin&quot;), true,false
)
*/
/*
 * Obsolete as all formula are implemented in ASI_CRM_SG_JDE_COA_Code__c after phase 2
IF (
    OR (TEXT(ASI_CRM_SG_Type__c)=&quot;Ad-hoc Promotions&quot;, 
	TEXT(ASI_CRM_SG_Type__c)=&quot;Cash - Target Achieved&quot;, 
	TEXT(ASI_CRM_SG_Type__c)=&quot;Contract Margin&quot;, 
	TEXT(ASI_CRM_SG_Type__c)=&quot;Bottle Incentive&quot;, 
	TEXT(ASI_CRM_SG_Type__c)=&quot;Signages&quot;
    ), 
    true,
    false
)*/


false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Is Append Local Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Payment Request Line Items (Sub-brand)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Payment_Request_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ad-hoc Promotions</fullName>
                </value>
                <value>
                    <fullName>Advertising Spot</fullName>
                </value>
                <value>
                    <fullName>Anniversary</fullName>
                </value>
                <value>
                    <fullName>Back Rebates</fullName>
                </value>
                <value>
                    <fullName>Bottle Incentive</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cash - Target Achieved</fullName>
                </value>
                <value>
                    <fullName>Cash - Upfront</fullName>
                </value>
                <value>
                    <fullName>Contract Margin</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Product Branding Display</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Signages</fullName>
                </value>
                <value>
                    <fullName>Signages / Advertising Spot</fullName>
                </value>
                <value>
                    <fullName>Trade Incentive Trips</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand_Grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Grade</label>
        <referenceTo>ASI_CRM_Sub_Brand_Grade__c</referenceTo>
        <relationshipLabel>Payment Request Line Items</relationshipLabel>
        <relationshipName>Payment_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Suggested_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Suggested Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Suggested_Volume__c</fullName>
        <label>Suggested Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sync_to_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Payable_Vol_Std_Bottle__c</fullName>
        <description>System Payable Vol (Std. Bottle)</description>
        <label>System Payable Vol (Std. Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_ID__c</fullName>
        <formula>ASI_TH_CRM_Payment_Request__r.ASI_TH_CRM_Vendor__r.ASI_KOR_Venue_Business_License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Type__c</fullName>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>SVAT(7%)</fullName>
                </value>
                <value>
                    <fullName>IVAT(7%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9L</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_V0_0_Full_Contract_Target__c</fullName>
        <label>V0.0 Full Contract Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>